Bug fixing overlapping elements on mobile

--- a/startup/main.css
+++ b/startup/main.css
@@ -1,9 +1,4 @@
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
   display: flex;
   flex-direction: column;
   min-width: 375px;
